fix(component-sidenav,component-viewer): fix sticky TOC (#917)
- remove `overflow: hidden` that breaks TOC stickiness
  - made sure to keep the Material Table examples from overflowing afterwards
    via changes to `component-viewer.scss`
- revert change from #784 to make small breakpoint 939 instead of 959 as it
  isn't consistent with our Sass breakpoints or the Material layout spec
- use alternative to `router-outlet + *` styling
- use constants for more media query breakpoints
- add some missing Sass imports
- move $sidenav-width to constants
- update constants to include different horizontal padding for
  guides and sidenav content
- update copyright year
- add stylePreprocessorOptions for shorter Sass imports
- add .nvmrc since Angular projects only support NodeJS 12 atm

Fixes #257

--- a/material.angular.io/src/app/pages/component-viewer/component-viewer.scss
+++ b/material.angular.io/src/app/pages/component-viewer/component-viewer.scss
@@ -1,12 +1,18 @@
-@import '../../../styles/constants';
+@import 'constants';
 
 app-component-viewer {
   font-weight: 400;
+  width: calc(100% - #{$sidenav-width + 1} - #{$content-padding-sidenav * 2});
 
   // spacing for the component viewer
-  padding: 20px 50px;
+  padding: 20px $content-padding-sidenav;
 
+  // Sidenav is hidden
+  @media (max-width: $small-breakpoint-width) {
+    width: calc(100% - #{$content-padding-sidenav * 2});
+  }
   @media ($mat-xsmall) {
+    width: calc(100% - #{$content-padding-side-xs * 2});
     padding-left: $content-padding-side-xs;
     padding-right: $content-padding-side-xs;
   }
